k8s/magento.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${CUSTOMER_NAME}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: magento
    customer: ${CUSTOMER_NAME}
  name: magento-svc
  namespace: ${CUSTOMER_NAME}
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: magento-ui
  selector:
    app: magento
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: magento
    customer: ${CUSTOMER_NAME}
  name: magento
  namespace: ${CUSTOMER_NAME}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: magento
  template:
    metadata:
      labels: 
        app: magento
        customer: ${CUSTOMER_NAME}
    spec:
      containers:
      - image: ${DOCKER_IMAGE_DOMAIN_LOCALHOST}
        #imagePullPolicy: Never
        name: magento-pod
        volumeMounts:
          - name: magento-storage
            mountPath: /var/www/html/magento2
      volumes:
      - name: magento-storage
        persistentVolumeClaim:
          claimName: magento-pv-claim
